--- a/intelligence/src/main/resources/application-test.yml
+++ b/intelligence/src/main/resources/application-test.yml
@@ -4,8 +4,8 @@ spring:
     datasource:
         name: test
         url: jdbc:mysql://192.168.1.143:3306/carlink?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-        username: carlinktest
-        password: ahMai6EKifohxughaY
+        username: root
+        password: q1w2e3r4t5
          # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
