--- a/intelligence/src/main/resources/application-dev.yml
+++ b/intelligence/src/main/resources/application-dev.yml
@@ -3,9 +3,9 @@ server:
 spring:
     datasource:
         name: dev
-        url: jdbc:mysql://192.168.1.143:3306/carlink?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+        url: jdbc:mysql://127.0.0.1:3306/mysql?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
         username: root
-        password: q1w2e3r4t5
+        password: 123456
          # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
