--- a/intelligence/src/main/resources/application-dev.yml
+++ b/intelligence/src/main/resources/application-dev.yml
@@ -3,9 +3,9 @@ server:
 spring:
     datasource:
         name: dev
-        url: jdbc:mysql://127.0.0.1:3306/intelligence?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+        url: jdbc:mysql://127.0.0.1:3306/mysql?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
         username: root
-        password: root
+        password: 123456
          # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
