--- a/intelligence/src/main/resources/application-dev.yml
+++ b/intelligence/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ server:
 spring:
     datasource:
         name: dev
-        url: jdbc:mysql://localhost:3306/intelligence?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+        url: jdbc:mysql://localhost:3306/mysql?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
         username: root
         password: root
          # 使用druid数据源
